Update CSS & Tailwind config, fixing dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+  @define-mixin theme-light {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
@@ -23,7 +23,6 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
-    --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
@@ -31,7 +30,7 @@
     --chart-5: 27 87% 67%;
   }
 
-  .dark {
+  @define-mixin theme-dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
@@ -56,6 +55,34 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+  }
+
+  :root {
+    color-scheme: light dark;
+
+    --border-radius: 0.5rem;
+    --scrollbar-height: 0.75rem;
+    --scrollbar-width: 0.75rem;
+
+    @mixin theme-light;
+  }
+  @media not print {
+    @media (prefers-color-scheme: dark) {
+      :root {
+        @mixin theme-dark;
+      }
+    }
+  }
+}
+
+[data-theme='light'] {
+  color-scheme: light;
+  @mixin theme-light;
+}
+@media not print {
+  [data-theme='dark'] {
+    color-scheme: dark;
+    @mixin theme-dark;
   }
 }
 
